# car_agent

./: .gitignore  README.md  colcon_agent.sh  setup.bash  setup.sh
install/: local_setup.sh  setup.sh
install/car_agent_bringup/share/car_agent_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/car_agent_bringup/share/car_agent_bringup/config/: car_joy.yaml
install/car_control/share/car_control/: package.dsv  package.ps1  package.sh  package.xml
install/diagnostic_aggregator/lib/diagnostic_aggregator/: add_analyzer  aggregator_node
install/diagnostic_aggregator/share/diagnostic_aggregator/: example.launch.py  package.ps1  package.sh
install/diagnostic_common_diagnostics/share/diagnostic_common_diagnostics/: local_setup.sh  package.ps1  package.sh
install/diagnostic_remote_logging/lib/diagnostic_remote_logging/: influxdb_connector
install/diagnostic_remote_logging/share/diagnostic_remote_logging/: package.ps1  package.sh
install/diagnostic_updater/lib/diagnostic_updater/: example
install/diagnostic_updater/share/diagnostic_updater/: package.ps1  package.sh
install/diagnostics/share/diagnostics/: local_setup.sh  package.ps1  package.sh
install/lslidar_driver/share/lslidar_driver/: package.sh
install/lslidar_msgs/share/lslidar_msgs/: package.sh
install/self_test/lib/self_test/: run_selftest  selftest_example
install/self_test/share/self_test/: package.ps1  package.sh
log/: latest_build
src/Lslidar_ROS2_driver/lslidar_msgs/: CMakeLists.txt
src/car_agent_bringup/: setup.py
src/car_agent_bringup/config/: car_joy.yaml  lsn10p.yaml  usb_cam_params.yaml
src/car_agent_bringup/launch/: car_agent.launch.py
src/car_control/: setup.py
src/car_control/car_control/: cmd_vel_relay.py  joy_simulator.py  serial_bridge.py
src/car_control/scripts/: cmd_vel_relay  joy_simulator  serial_bridge
src/diagnostics/: README.md
src/diagnostics/.github/: mergify.yml
src/diagnostics/.github/workflows/: lint.yaml  test.yaml
(+7 files in other folders)
