<?xml version="1.0"?>
<package format="3">
  <name>car_agent_bringup</name>
  <version>0.0.0</version>
  <description>Car agent bringup: sensors, serial, TF</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>lslidar_driver</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>car_control</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
