<?xml version="1.0"?>
<package format="3">
  <name>car_control</name>
  <version>0.0.0</version>
  <description>Car agent control logic: relay, serial bridge, joy simulator</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
